<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="kepanitiaan_switch"
        android:summary="@string/pref_desc_kepanitiaan"
        android:title="@string/pref_kepanitiaan" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pengumuman_switch"
        android:summary="@string/pref_desc_pengumuman"
        android:title="@string/pref_pengumuman" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="jualbeli_switch"
        android:summary="@string/pref_desc_jualbeli"
        android:title="@string/pref_jualbeli" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="event_switch"
        android:summary="@string/pref_desc_event"
        android:title="@string/pref_event" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="beasiswa_switch"
        android:summary="@string/pref_desc_beasiswa"
        android:title="@string/pref_beasiswa" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
